downgrade to java 8 version